k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company-web
  namespace: company
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /employee
            pathType: Prefix
            backend:
              service:
                name: employee-web
                port:
                  number: 80

          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-web
                port:
                  number: 80
